<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_ordenar"
        android:icon="@drawable/ic_sort"
        android:title="@string/menu_ordenar"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_ordenar_titulo"
                android:title="@string/menu_ordenar_titulo" />
            <item
                android:id="@+id/action_ordenar_anio"
                android:title="@string/menu_ordenar_anio" />
            <item
                android:id="@+id/action_ordenar_valoracion"
                android:title="@string/menu_ordenar_valoracion" />
        </menu>
    </item>

    <item
        android:id="@+id/action_filtrar"
        android:icon="@drawable/ic_filter"
        android:title="@string/menu_filtrar"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_filtrar_genero"
                android:title="@string/menu_filtrar_genero" />
            <item
                android:id="@+id/action_filtrar_anio"
                android:title="@string/menu_filtrar_anio" />
        </menu>
    </item>

</menu>
