<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_editar"
        android:icon="@drawable/ic_edit"
        android:title="@string/btn_editar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_eliminar"
        android:icon="@drawable/ic_delete"
        android:title="@string/btn_eliminar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_compartir"
        android:icon="@drawable/ic_share"
        android:title="@string/btn_compartir"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_agregar_a_lista"
        android:title="@string/btn_agregar_a_lista"
        app:showAsAction="never" />

</menu>
